--- a/overlay-gzosp/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-gzosp/frameworks/base/core/res/res/values/config.xml
@@ -61,4 +61,10 @@
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
     <integer name="config_longPressOnAppSwitchBehavior">1</integer> -->
 
+    <!-- doze always on -->
+    <bool name="config_enableDozeAlwaysOn">true</bool>
+
+    <!-- Whether notify fingerprint client of successful cancelled authentication -->
+    <bool name="config_notifyClientOnFingerprintCancelSuccess">true</bool>
+
 </resources>
