op3: Prevent FP enrollment from disabling navbar

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -24,4 +24,7 @@
        3 = right side
   -->
   <integer name="config_fingerprintSensorLocation">1</integer>
+
+  <!-- Prevent navbar from being disabled on FP enrollment -->
+  <bool name="config_hasBottomFingerprintSensor">true</bool>
 </resources>
